tests/error/non_public_typedef_global_scope.gw
#! [contains] can't use non public typedef at global scope
class C {
  typedef void t_ptr();
}
C->t_ptr ptr;
